--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express-mongo-sanitize": "^2.2.0",
     "mongoose": "^6.8.3",
     "nodemon": "^2.0.20",
+    "validator": "^13.7.0",
     "xss-clean": "^0.1.1"
   },
   "devDependencies": {
