--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
     "concurrently": "^7.6.0",
-    "dotenv": "^16.0.3",
+    "env-cmd": "^10.1.0",
     "express": "^4.18.2",
     "express-mongo-sanitize": "^2.2.0",
     "http-status": "^1.6.2",
