--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node server/server.js",
-    "server": "nodemon server/server.js",
+    "server": "env-cmd -f ./.env nodemon server/server.js",
     "client": "npm start --prefix client",
     "commit": "cz",
     "release": "standard-version",
@@ -23,7 +23,6 @@
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
     "concurrently": "^7.6.0",
-    "env-cmd": "^10.1.0",
     "express": "^4.18.2",
     "express-mongo-sanitize": "^2.2.0",
     "http-status": "^1.6.2",
@@ -36,6 +35,7 @@
   },
   "devDependencies": {
     "commitizen": "^4.2.6",
+    "env-cmd": "^10.1.0",
     "nodemon": "^3.0.1",
     "standard-version": "^9.5.0"
   },
