--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "jsonwebtoken": "^9.0.0",
     "mailgen": "^2.0.27",
     "mongoose": "^7.5.0",
+    "nodemailer": "^6.9.5",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "validator": "^13.7.0",
