--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "nodemailer": "^6.9.5",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
+    "uuid": "^9.0.1",
     "validator": "^13.7.0",
     "xss-clean": "^0.1.1"
   },
